pmysql.output
Nonterminals useless in grammar

   opt_binary
   enum_list


Terminals unused in grammar

   ADD
   ALTER
   ANALYZE
   BEFORE
   BIGINT
   BIT
   BLOB
   CALL
   CASCADE
   CHANGE
   CHECK
   COLUMN
   CONDITION
   CONSTRAINT
   CONTINUE
   CONVERT
   CURRENT_USER
   CURSOR
   DATABASES
   DATE
   DATETIME
   DECIMAL
   DECLARE
   DESCRIBE
   DETERMINISTIC
   DIV
   DOUBLE
   DROP
   DUAL
   EACH
   ELSEIF
   ENCLOSED
   ENUM
   ESCAPED
   EXIT
   EXPLAIN
   FETCH
   FLOAT
   FOREIGN
   GRANT
   INFILE
   INOUT
   INSENSITIVE
   INT
   ITERATE
   KEYS
   KILL
   LEAVE
   LINES
   LOAD
   LOCALTIME
   LOCALTIMESTAMP
   LOCK
   LONG
   LONGBLOB
   LONGTEXT
   LOOP
   MATCH
   MEDIUMBLOB
   MEDIUMINT
   MEDIUMTEXT
   MINUTE_MICROSECOND
   MINUTE_SECOND
   MODIFIES
   NO_WRITE_TO_BINLOG
   NUMBER
   OPTIMIZE
   OPTION
   OPTIONALLY
   OUT
   OUTFILE
   PRECISION
   PROCEDURE
   PURGE
   READ
   READS
   REAL
   REFERENCES
   RELEASE
   RENAME
   REPEAT
   REQUIRE
   RESTRICT
   RETURN
   REVOKE
   SCHEMAS
   SECOND_MICROSECOND
   SENSITIVE
   SEPARATOR
   SMALLINT
   SONAME
   SPATIAL
   SPECIFIC
   SQLEXCEPTION
   SQLSTATE
   SQLWARNING
   SSL
   STARTING
   TEXT
   TERMINATED
   TIME
   TIMESTAMP
   TINYBLOB
   TINYINT
   TINYTEXT
   TO
   TRIGGER
   UNDO
   UNION
   UNLOCK
   USAGE
   UTC_DATE
   UTC_TIME
   UTC_TIMESTAMP
   VARBINARY
   VARYING
   WHILE
   WRITE


Rules useless in grammar

  289 opt_binary: %empty
  290           | BINARY

  291 enum_list: STRING
  292          | enum_list ',' STRING


State 32 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 stmt: show_log_stmt

    4 show_log_stmt: SHOW NAME
    5              | SHOW ALL

    6 stmt: import_file_stmt

    7 import_file_stmt: IMPORT NAME '.' NAME

    8 stmt: test_stmt

    9 test_stmt: TEST_SEL

   10 stmt: insert_stmt

   11 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
   12            | NAME insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
   13            | INSERT insert_opts opt_into NAME opt_col_names insert_vals_list opt_ondupupdate
   14            | INSERT insert_opts opt_into NAME opt_col_names NAME insert_vals_list opt_ondupupdate

   15 opt_ondupupdate: %empty
   16                | ONDUPLICATE KEY UPDATE insert_asgn_list

   17 insert_opts: %empty
   18            | insert_opts LOW_PRIORITY
   19            | insert_opts DELAYED
   20            | insert_opts HIGH_PRIORITY
   21            | insert_opts IGNORE

   22 opt_into: INTO
   23         | %empty

   24 opt_col_names: %empty
   25              | '(' column_list ')'

   26 insert_vals_list: '(' insert_vals ')'
   27                 | insert_vals_list ',' '(' insert_vals ')'

   28 insert_vals: expr
   29            | DEFAULT
   30            | insert_vals ',' expr
   31            | insert_vals ',' DEFAULT

   32 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
   33            | INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

   34 insert_asgn_list: NAME COMPARISON expr
   35                 | NAME COMPARISON DEFAULT
   36                 | insert_asgn_list ',' NAME COMPARISON expr
   37                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

   38 stmt: create_index_stmt

   39 create_index_stmt: CREATE_INDEX '(' column_list ')' ON NAME '(' column_list ')'
   40                  | CREATE_INDEX ON

   41 stmt: create_table_stmt

   42 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
   43                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
   44                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
   45                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
   46                  | CREATE opt_temporary opt_if_not_exists NAME '(' create_col_list ')'
   47                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_col_list ')'
   48                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list
   49                  | NAME opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
   50                  | CREATE opt_temporary NAME opt_if_not_exists NAME '(' create_col_list ')'
   51                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
   52                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

   53 create_col_list: create_definition
   54                | create_col_list ',' create_definition

   55 create_definition: %empty

   56 $@1: %empty

   57 create_definition: $@1 NAME data_type column_atts
   58                  | PRIMARY KEY '(' column_list ')'
   59                  | KEY '(' column_list ')'
   60                  | FULLTEXT INDEX '(' column_list ')'
   61                  | FULLTEXT KEY '(' column_list ')'

   62 column_atts: %empty
   63            | column_atts NOT NULLX
   64            | column_atts NULLX
   65            | column_atts DEFAULT STRING
   66            | column_atts DEFAULT INTNUM
   67            | column_atts DEFAULT APPROXNUM
   68            | column_atts DEFAULT BOOL
   69            | column_atts AUTO_INCREMENT
   70            | column_atts UNIQUE '(' column_list ')'
   71            | column_atts UNIQUE KEY
   72            | column_atts PRIMARY KEY
   73            | column_atts KEY
   74            | column_atts COMMENT STRING

   75 opt_length: %empty
   76           | '(' INTNUM ')'
   77           | '(' INTNUM ',' INTNUM ')'

   78 opt_uz: %empty
   79       | opt_uz UNSIGNED
   80       | opt_uz ZEROFILL

   81 opt_csc: %empty
   82        | opt_csc CHAR SET STRING
   83        | opt_csc COLLATE STRING

   84 data_type: INTEGER opt_length opt_uz
   85          | VARCHAR '(' INTNUM ')' opt_csc

   86 create_select_statement: opt_ignore_replace opt_as select_stmt

   87 opt_ignore_replace: %empty
   88                   | IGNORE
   89                   | REPLACE

   90 opt_temporary: %empty
   91              | TEMPORARY

   92 stmt: select_stmt

   93 select_stmt: SELECT select_opts select_expr_list
   94            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

   95 opt_where: %empty
   96          | WHERE expr

   97 opt_groupby: %empty
   98            | GROUP BY groupby_list opt_with_rollup

   99 groupby_list: expr opt_asc_desc
  100             | groupby_list ',' expr opt_asc_desc

  101 opt_asc_desc: %empty
  102             | ASC
  103             | DESC

  104 opt_with_rollup: %empty
  105                | WITH ROLLUP

  106 opt_having: %empty
  107           | HAVING expr

  108 opt_orderby: %empty
  109            | ORDER BY groupby_list

  110 opt_limit: %empty
  111          | LIMIT expr
  112          | LIMIT expr ',' expr

  113 opt_into_list: %empty
  114              | INTO column_list

  115 column_list: NAME
  116            | column_list ',' NAME

  117 select_opts: %empty
  118            | select_opts ALL
  119            | select_opts DISTINCT
  120            | select_opts DISTINCTROW
  121            | select_opts HIGH_PRIORITY
  122            | select_opts STRAIGHT_JOIN
  123            | select_opts SQL_SMALL_RESULT
  124            | select_opts SQL_BIG_RESULT
  125            | select_opts SQL_CALC_FOUND_ROWS

  126 select_expr_list: select_expr
  127                 | select_expr_list ',' select_expr
  128                 | '*'

  129 select_expr: expr opt_as_alias
  130            | NAME '.' '*'

  131 table_references: table_reference
  132                 | table_references ',' table_reference

  133 table_reference: table_factor
  134                | join_table

  135 table_factor: NAME opt_as_alias index_hint
  136             | NAME '.' NAME opt_as_alias index_hint
  137             | table_subquery opt_as NAME
  138             | '(' table_references ')'

  139 opt_as: AS
  140       | %empty

  141 opt_as_alias: AS NAME
  142             | NAME
  143             | %empty

  144 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
  145           | table_reference STRAIGHT_JOIN table_factor
  146           | table_reference STRAIGHT_JOIN table_factor ON expr
  147           | table_reference left_or_right opt_outer JOIN table_factor join_condition
  148           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

  149 opt_inner_cross: %empty
  150                | INNER
  151                | CROSS

  152 opt_outer: %empty
  153          | OUTER

  154 left_or_right: LEFT
  155              | RIGHT

  156 opt_left_or_right_outer: LEFT opt_outer
  157                        | RIGHT opt_outer
  158                        | %empty

  159 opt_join_condition: join_condition
  160                   | %empty

  161 join_condition: ON expr
  162               | USING '(' column_list ')'

  163 index_hint: USE KEY opt_for_join '(' index_list ')'
  164           | IGNORE KEY opt_for_join '(' index_list ')'
  165           | FORCE KEY opt_for_join '(' index_list ')'
  166           | %empty

  167 opt_for_join: FOR JOIN
  168             | %empty

  169 index_list: NAME
  170           | index_list ',' NAME

  171 table_subquery: '(' select_stmt ')'

  172 stmt: delete_stmt

  173 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

  174 delete_opts: delete_opts LOW_PRIORITY
  175            | delete_opts QUICK
  176            | delete_opts IGNORE
  177            | %empty

  178 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

  179 delete_list: NAME opt_dot_star
  180            | delete_list ',' NAME opt_dot_star

  181 opt_dot_star: %empty
  182             | '.' '*'

  183 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

  184 stmt: replace_stmt

  185 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  186             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  187             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  188 stmt: update_stmt

  189 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  190 update_opts: %empty
  191            | insert_opts LOW_PRIORITY
  192            | insert_opts IGNORE

  193 update_asgn_list: NAME COMPARISON expr
  194                 | NAME '.' NAME COMPARISON expr
  195                 | update_asgn_list ',' NAME COMPARISON expr
  196                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  197 stmt: create_database_stmt

  198 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  199                     | CREATE SCHEMA opt_if_not_exists NAME

  200 opt_if_not_exists: %empty
  201                  | IF EXISTS

  202 stmt: set_stmt

  203 set_stmt: SET set_list

  204 set_list: set_expr
  205         | set_list ',' set_expr

  206 set_expr: USERVAR COMPARISON expr
  207         | USERVAR ASSIGN expr

  208 expr: NAME
  209     | USERVAR
  210     | NAME '.' NAME
  211     | STRING
  212     | INTNUM
  213     | APPROXNUM
  214     | BOOL
  215     | expr '+' expr
  216     | expr '-' expr
  217     | expr '*' expr
  218     | expr '/' expr
  219     | expr '%' expr
  220     | expr MOD expr
  221     | '-' expr
  222     | expr ANDOP expr
  223     | expr OR expr
  224     | expr XOR expr
  225     | expr COMPARISON expr
  226     | expr COMPARISON '(' select_stmt ')'
  227     | expr COMPARISON ANY '(' select_stmt ')'
  228     | expr COMPARISON SOME '(' select_stmt ')'
  229     | expr COMPARISON ALL '(' select_stmt ')'
  230     | expr '|' expr
  231     | expr '&' expr
  232     | expr '^' expr
  233     | expr SHIFT expr
  234     | NOT expr
  235     | '!' expr
  236     | USERVAR ASSIGN expr
  237     | expr IS NULLX
  238     | expr IS NOT NULLX
  239     | expr IS BOOL
  240     | expr IS NOT BOOL
  241     | expr BETWEEN expr AND expr

  242 val_list: expr
  243         | expr ',' val_list

  244 opt_val_list: %empty
  245             | val_list

  246 expr: expr IN '(' val_list ')'
  247     | expr NOT IN '(' val_list ')'
  248     | expr IN '(' select_stmt ')'
  249     | expr NOT IN '(' select_stmt ')'
  250     | EXISTS '(' select_stmt ')'
  251     | NAME '(' opt_val_list ')'
  252     | FCOUNT '(' '*' ')'
  253     | FCOUNT '(' expr ')'
  254     | FSUM '(' '*' ')'
  255     | FSUM '(' expr ')'
  256     | FSUBSTRING '(' val_list ')'
  257     | FSUBSTRING '(' expr FROM expr ')'
  258     | FSUBSTRING '(' expr FROM expr FOR expr ')'
  259     | FTRIM '(' val_list ')'
  260     | FTRIM '(' trim_ltb expr FROM val_list ')'

  261 trim_ltb: LEADING
  262         | TRAILING
  263         | BOTH

  264 expr: FDATE_ADD '(' expr ',' interval_exp ')'
  265     | FDATE_SUB '(' expr ',' interval_exp ')'

  266 interval_exp: INTERVAL expr DAY_HOUR
  267             | INTERVAL expr DAY_MICROSECOND
  268             | INTERVAL expr DAY_MINUTE
  269             | INTERVAL expr DAY_SECOND
  270             | INTERVAL expr YEAR_MONTH
  271             | INTERVAL expr YEAR
  272             | INTERVAL expr HOUR_MICROSECOND
  273             | INTERVAL expr HOUR_MINUTE
  274             | INTERVAL expr HOUR_SECOND

  275 expr: CASE expr case_list END
  276     | CASE expr case_list ELSE expr END
  277     | CASE case_list END
  278     | CASE case_list ELSE expr END

  279 case_list: WHEN expr THEN expr
  280          | case_list WHEN expr THEN expr

  281 expr: expr LIKE expr
  282     | expr NOT LIKE expr
  283     | expr REGEXP expr
  284     | expr NOT REGEXP expr
  285     | CURRENT_TIMESTAMP
  286     | CURRENT_DATE
  287     | CURRENT_TIME
  288     | BINARY expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 235
'%' (37) 219
'&' (38) 231
'(' (40) 25 26 27 39 42 43 44 46 48 49 50 51 58 59 60 61 70 76 77 85
    138 162 163 164 165 171 226 227 228 229 246 247 248 249 250 251
    252 253 254 255 256 257 258 259 260 264 265
')' (41) 25 26 27 39 42 43 44 46 47 49 50 51 58 59 60 61 70 76 77 85
    138 162 163 164 165 171 226 227 228 229 246 247 248 249 250 251
    252 253 254 255 256 257 258 259 260 264 265
'*' (42) 128 130 182 217 252 254
'+' (43) 215
',' (44) 27 30 31 36 37 54 77 100 112 116 127 132 170 180 195 196 205
    243 264 265
'-' (45) 216 221
'.' (46) 7 43 51 52 130 136 182 194 196 210
'/' (47) 218
';' (59) 1 2
'^' (94) 232
'|' (124) 230
error (256)
NAME (258) 4 7 11 12 13 14 32 33 34 35 36 37 39 42 43 44 45 46 47 48
    49 50 51 52 57 115 116 130 135 136 137 141 142 169 170 173 179
    180 185 186 187 193 194 195 196 198 199 208 210 251
STRING (259) 65 74 82 83 211
INTNUM (260) 66 76 77 85 212
BOOL (261) 68 214 239 240
APPROXNUM (262) 67 213
USERVAR (263) 206 207 209 236
ASSIGN (264) 207 236
OR (265) 223
XOR (266) 224
ANDOP (267) 222
IN (268) 246 247 248 249
IS (269) 237 238 239 240
LIKE (270) 281 282
REGEXP (271) 283 284
NOT (272) 63 234 238 240 247 249 282 284
BETWEEN (273) 241
COMPARISON (274) 34 35 36 37 193 194 195 196 206 225 226 227 228 229
SHIFT (275) 233
MOD (276) 220
UMINUS (277)
ADD (278)
ALL (279) 5 118 229
ALTER (280)
ANALYZE (281)
AND (282) 241
ANY (283) 227
AS (284) 139 141
ASC (285) 102
AUTO_INCREMENT (286) 69
BEFORE (287)
BIGINT (288)
BINARY (289) 288
BIT (290)
BLOB (291)
BOTH (292) 263
BY (293) 98 109
CALL (294)
CASCADE (295)
CASE (296) 275 276 277 278
CHANGE (297)
CHAR (298) 82
CHECK (299)
COLLATE (300) 83
COLUMN (301)
COMMENT (302) 74
CONDITION (303)
CONSTRAINT (304)
CONTINUE (305)
CONVERT (306)
CREATE (307) 42 43 44 45 46 47 48 50 51 52 198 199
CREATE_INDEX (308) 39 40
CROSS (309) 151
CURRENT_DATE (310) 286
CURRENT_TIME (311) 287
CURRENT_TIMESTAMP (312) 285
CURRENT_USER (313)
CURSOR (314)
DATABASE (315) 198
DATABASES (316)
DATE (317)
DATETIME (318)
DAY_HOUR (319) 266
DAY_MICROSECOND (320) 267
DAY_MINUTE (321) 268
DAY_SECOND (322) 269
DECIMAL (323)
DECLARE (324)
DEFAULT (325) 29 31 35 37 65 66 67 68
DELAYED (326) 19
DELETE (327) 173 178 183
DESC (328) 103
DESCRIBE (329)
DETERMINISTIC (330)
DISTINCT (331) 119
DISTINCTROW (332) 120
DIV (333)
DOUBLE (334)
DROP (335)
DUAL (336)
EACH (337)
ELSE (338) 276 278
ELSEIF (339)
ENCLOSED (340)
END (341) 275 276 277 278
ENUM (342)
ESCAPED (343)
EXISTS (344) 201 250
EXIT (345)
EXPLAIN (346)
FETCH (347)
FLOAT (348)
FOR (349) 167 258
FORCE (350) 165
FOREIGN (351)
FROM (352) 94 173 178 183 257 258 260
FULLTEXT (353) 60 61
GRANT (354)
GROUP (355) 98
HAVING (356) 107
HIGH_PRIORITY (357) 20 121
HOUR_MICROSECOND (358) 272
HOUR_MINUTE (359) 273
HOUR_SECOND (360) 274
IF (361) 201
IGNORE (362) 21 88 164 176 192
IMPORT (363) 7
INDEX (364) 60
INFILE (365)
INNER (366) 150
INOUT (367)
INSENSITIVE (368)
INSERT (369) 11 13 14 32 33
INT (370)
INTEGER (371) 84
INTERVAL (372) 266 267 268 269 270 271 272 273 274
INTO (373) 22 114
ITERATE (374)
JOIN (375) 144 147 148 167
KEY (376) 16 58 59 61 71 72 73 163 164 165
KEYS (377)
KILL (378)
LEADING (379) 261
LEAVE (380)
LEFT (381) 154 156
LIMIT (382) 111 112
LINES (383)
LOAD (384)
LOCALTIME (385)
LOCALTIMESTAMP (386)
LOCK (387)
LONG (388)
LONGBLOB (389)
LONGTEXT (390)
LOOP (391)
LOW_PRIORITY (392) 18 174 191
MATCH (393)
MEDIUMBLOB (394)
MEDIUMINT (395)
MEDIUMTEXT (396)
MINUTE_MICROSECOND (397)
MINUTE_SECOND (398)
MODIFIES (399)
NATURAL (400) 148
NO_WRITE_TO_BINLOG (401)
NULLX (402) 63 64 237 238
NUMBER (403)
ON (404) 39 40 146 161
ONDUPLICATE (405) 16
OPTIMIZE (406)
OPTION (407)
OPTIONALLY (408)
ORDER (409) 109
OUT (410)
OUTER (411) 153
OUTFILE (412)
PRECISION (413)
PRIMARY (414) 58 72
PROCEDURE (415)
PURGE (416)
QUICK (417) 175
READ (418)
READS (419)
REAL (420)
REFERENCES (421)
RELEASE (422)
RENAME (423)
REPEAT (424)
REPLACE (425) 89 185 186 187
REQUIRE (426)
RESTRICT (427)
RETURN (428)
REVOKE (429)
RIGHT (430) 155 157
ROLLUP (431) 105
SCHEMA (432) 199
SCHEMAS (433)
SECOND_MICROSECOND (434)
SELECT (435) 93 94
SENSITIVE (436)
SEPARATOR (437)
SET (438) 32 82 186 189 203
SHOW (439) 4 5
SMALLINT (440)
SOME (441) 228
SONAME (442)
SPATIAL (443)
SPECIFIC (444)
SQLEXCEPTION (445)
SQLSTATE (446)
SQLWARNING (447)
SQL_BIG_RESULT (448) 124
SQL_CALC_FOUND_ROWS (449) 125
SQL_SMALL_RESULT (450) 123
SSL (451)
STARTING (452)
STRAIGHT_JOIN (453) 122 145 146
TABLE (454) 42 43 44 45 47 48 49 51 52
TEMPORARY (455) 91
TEST_SEL (456) 9
TEXT (457)
TERMINATED (458)
THEN (459) 279 280
TIME (460)
TIMESTAMP (461)
TINYBLOB (462)
TINYINT (463)
TINYTEXT (464)
TO (465)
TRAILING (466) 262
TRIGGER (467)
UNDO (468)
UNION (469)
UNIQUE (470) 70 71
UNLOCK (471)
UNSIGNED (472) 79
UPDATE (473) 16 189
USAGE (474)
USE (475) 163
USING (476) 162 183
UTC_DATE (477)
UTC_TIME (478)
UTC_TIMESTAMP (479)
VALUES (480) 11 12 185
VARBINARY (481)
VARCHAR (482) 85
VARYING (483)
WHEN (484) 279 280
WHERE (485) 96
WHILE (486)
WITH (487) 105
WRITE (488)
YEAR (489) 271
YEAR_MONTH (490) 270
ZEROFILL (491) 80
FSUBSTRING (492) 256 257 258
FTRIM (493) 259 260
FDATE_ADD (494) 264
FDATE_SUB (495) 265
FCOUNT (496) 252 253
FSUM (497) 254 255


Nonterminals, with rules where they appear

$accept (257)
    on left: 0
stmt_list (258)
    on left: 1 2, on right: 0 2
stmt (259)
    on left: 3 6 8 10 38 41 92 172 184 188 197 202, on right: 1 2
show_log_stmt (260)
    on left: 4 5, on right: 3
import_file_stmt (261)
    on left: 7, on right: 6
test_stmt (262)
    on left: 9, on right: 8
insert_stmt (263)
    on left: 11 12 13 14 32 33, on right: 10
opt_ondupupdate (264)
    on left: 15 16, on right: 11 12 13 14 32 33 185 186 187
insert_opts (265)
    on left: 17 18 19 20 21, on right: 11 12 13 14 18 19 20 21 32 33
    185 186 187 191 192
opt_into (266)
    on left: 22 23, on right: 11 12 13 14 32 33 185 186 187
opt_col_names (267)
    on left: 24 25, on right: 11 12 13 14 33 185 187
insert_vals_list (268)
    on left: 26 27, on right: 11 12 13 14 27 185
insert_vals (269)
    on left: 28 29 30 31, on right: 26 27 30 31
insert_asgn_list (270)
    on left: 34 35 36 37, on right: 16 32 36 37 186
create_index_stmt (271)
    on left: 39 40, on right: 38
create_table_stmt (272)
    on left: 42 43 44 45 46 47 48 49 50 51 52, on right: 41
create_col_list (273)
    on left: 53 54, on right: 42 43 44 46 47 48 49 50 51 54
create_definition (274)
    on left: 55 57 58 59 60 61, on right: 53 54
$@1 (275)
    on left: 56, on right: 57
column_atts (276)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74, on right: 57 63
    64 65 66 67 68 69 70 71 72 73 74
opt_length (277)
    on left: 75 76 77, on right: 84
opt_uz (278)
    on left: 78 79 80, on right: 79 80 84
opt_csc (279)
    on left: 81 82 83, on right: 82 83 85
data_type (280)
    on left: 84 85, on right: 57
create_select_statement (281)
    on left: 86, on right: 44 45 51 52
opt_ignore_replace (282)
    on left: 87 88 89, on right: 86
opt_temporary (283)
    on left: 90 91, on right: 42 43 44 45 46 47 48 49 50 51 52
select_stmt (284)
    on left: 93 94, on right: 33 86 92 171 187 226 227 228 229 248
    249 250
opt_where (285)
    on left: 95 96, on right: 94 173 178 183 189
opt_groupby (286)
    on left: 97 98, on right: 94
groupby_list (287)
    on left: 99 100, on right: 98 100 109
opt_asc_desc (288)
    on left: 101 102 103, on right: 99 100
opt_with_rollup (289)
    on left: 104 105, on right: 98
opt_having (290)
    on left: 106 107, on right: 94
opt_orderby (291)
    on left: 108 109, on right: 94 173 189
opt_limit (292)
    on left: 110 111 112, on right: 94 173 189
opt_into_list (293)
    on left: 113 114, on right: 94
column_list (294)
    on left: 115 116, on right: 25 39 58 59 60 61 70 114 116 162
select_opts (295)
    on left: 117 118 119 120 121 122 123 124 125, on right: 93 94 118
    119 120 121 122 123 124 125
select_expr_list (296)
    on left: 126 127 128, on right: 93 94 127
select_expr (297)
    on left: 129 130, on right: 126 127
table_references (298)
    on left: 131 132, on right: 94 132 138 178 183 189
table_reference (299)
    on left: 133 134, on right: 131 132 144 145 146 147 148
table_factor (300)
    on left: 135 136 137 138, on right: 133 144 145 146 147 148
opt_as (301)
    on left: 139 140, on right: 86 137
opt_as_alias (302)
    on left: 141 142 143, on right: 129 135 136
join_table (303)
    on left: 144 145 146 147 148, on right: 134
opt_inner_cross (304)
    on left: 149 150 151, on right: 144
opt_outer (305)
    on left: 152 153, on right: 147 156 157
left_or_right (306)
    on left: 154 155, on right: 147
opt_left_or_right_outer (307)
    on left: 156 157 158, on right: 148
opt_join_condition (308)
    on left: 159 160, on right: 144
join_condition (309)
    on left: 161 162, on right: 147 159
index_hint (310)
    on left: 163 164 165 166, on right: 135 136
opt_for_join (311)
    on left: 167 168, on right: 163 164 165
index_list (312)
    on left: 169 170, on right: 163 164 165 170
table_subquery (313)
    on left: 171, on right: 137
delete_stmt (314)
    on left: 173 178 183, on right: 172
delete_opts (315)
    on left: 174 175 176 177, on right: 173 174 175 176 178 183
delete_list (316)
    on left: 179 180, on right: 178 180 183
opt_dot_star (317)
    on left: 181 182, on right: 179 180
replace_stmt (318)
    on left: 185 186 187, on right: 184
update_stmt (319)
    on left: 189, on right: 188
update_opts (320)
    on left: 190 191 192, on right: 189
update_asgn_list (321)
    on left: 193 194 195 196, on right: 189 195 196
create_database_stmt (322)
    on left: 198 199, on right: 197
opt_if_not_exists (323)
    on left: 200 201, on right: 42 43 44 45 46 47 48 49 50 51 52 198
    199
set_stmt (324)
    on left: 203, on right: 202
set_list (325)
    on left: 204 205, on right: 203 205
set_expr (326)
    on left: 206 207, on right: 204 205
expr (327)
    on left: 208 209 210 211 212 213 214 215 216 217 218 219 220 221
    222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237
    238 239 240 241 246 247 248 249 250 251 252 253 254 255 256 257
    258 259 260 264 265 275 276 277 278 281 282 283 284 285 286 287
    288, on right: 28 30 34 36 96 99 100 107 111 112 129 146 161 193
    194 195 196 206 207 215 216 217 218 219 220 221 222 223 224 225
    226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241
    242 243 246 247 248 249 253 255 257 258 260 264 265 266 267 268
    269 270 271 272 273 274 275 276 278 279 280 281 282 283 284 288
val_list (328)
    on left: 242 243, on right: 243 245 246 247 256 259 260
opt_val_list (329)
    on left: 244 245, on right: 251
trim_ltb (330)
    on left: 261 262 263, on right: 260
interval_exp (331)
    on left: 266 267 268 269 270 271 272 273 274, on right: 264 265
case_list (332)
    on left: 279 280, on right: 275 276 277 278 280


State 0

    0 $accept: . stmt_list $end

    NAME          shift, and go to state 1
    CREATE        shift, and go to state 2
    CREATE_INDEX  shift, and go to state 3
    DELETE        shift, and go to state 4
    IMPORT        shift, and go to state 5
    INSERT        shift, and go to state 6
    REPLACE       shift, and go to state 7
    SELECT        shift, and go to state 8
    SET           shift, and go to state 9
    SHOW          shift, and go to state 10
    TEST_SEL      shift, and go to state 11
    UPDATE        shift, and go to state 12

    stmt_list             go to state 13
    stmt                  go to state 14
    show_log_stmt         go to state 15
    import_file_stmt      go to state 16
    test_stmt             go to state 17
    insert_stmt           go to state 18
    create_index_stmt     go to state 19
    create_table_stmt     go to state 20
    select_stmt           go to state 21
    delete_stmt           go to state 22
    replace_stmt          go to state 23
    update_stmt           go to state 24
    create_database_stmt  go to state 25
    set_stmt              go to state 26


State 1

   12 insert_stmt: NAME . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
   49 create_table_stmt: NAME . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'

    TEMPORARY  shift, and go to state 27

    TABLE     reduce using rule 90 (opt_temporary)
    $default  reduce using rule 17 (insert_opts)

    insert_opts    go to state 28
    opt_temporary  go to state 29


State 2

   42 create_table_stmt: CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
   43                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
   44                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
   45                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME create_select_statement
   46                  | CREATE . opt_temporary opt_if_not_exists NAME '(' create_col_list ')'
   47                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME create_col_list ')'
   48                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list
   50                  | CREATE . opt_temporary NAME opt_if_not_exists NAME '(' create_col_list ')'
   51                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
   52                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement
  198 create_database_stmt: CREATE . DATABASE opt_if_not_exists NAME
  199                     | CREATE . SCHEMA opt_if_not_exists NAME

    DATABASE   shift, and go to state 30
    SCHEMA     shift, and go to state 31
    TEMPORARY  shift, and go to state 27

    $default  reduce using rule 90 (opt_temporary)

    opt_temporary  go to state 32


State 3

   39 create_index_stmt: CREATE_INDEX . '(' column_list ')' ON NAME '(' column_list ')'
   40                  | CREATE_INDEX . ON

    ON   shift, and go to state 33
    '('  shift, and go to state 34


State 4

  173 delete_stmt: DELETE . delete_opts FROM NAME opt_where opt_orderby opt_limit
  178            | DELETE . delete_opts delete_list FROM table_references opt_where
  183            | DELETE . delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 177 (delete_opts)

    delete_opts  go to state 35


State 5

    7 import_file_stmt: IMPORT . NAME '.' NAME

    NAME  shift, and go to state 36


State 6

   11 insert_stmt: INSERT . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
   13            | INSERT . insert_opts opt_into NAME opt_col_names insert_vals_list opt_ondupupdate
   14            | INSERT . insert_opts opt_into NAME opt_col_names NAME insert_vals_list opt_ondupupdate
   32            | INSERT . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
   33            | INSERT . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 17 (insert_opts)

    insert_opts  go to state 37


State 7

  185 replace_stmt: REPLACE . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  186             | REPLACE . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  187             | REPLACE . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 17 (insert_opts)

    insert_opts  go to state 38


State 8

   93 select_stmt: SELECT . select_opts select_expr_list
   94            | SELECT . select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    $default  reduce using rule 117 (select_opts)

    select_opts  go to state 39


State 9

  203 set_stmt: SET . set_list

    USERVAR  shift, and go to state 40
